--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,4 @@
-<h1>Welcome to my app!</h1>
-<p>Sign up <%= link_to "here", "http://www.guehna.de"%>!</p>
+<div class="jumbotron">
+	<h1>Welcome to my app!</h1>
+	<p>Click here to <%= link_to "Sign up", "http://www.guehna.de", class: "btn btn-primary"%>!</p>
+</div>
