--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,7 +1,18 @@
+@import url(http://fonts.googleapis.com/css?family=Oswald:400,700);
+
 $body-bg:							#d35400;
-$navbar-inverse-bg: 				#2c3e50;
+$font-family-sans-serif:      'Oswald', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $navbar-inverse-link-color:	#ecf0f1;   
 $brand-primary:					#d35400;
 $jumbotron-bg:						#bdc3c7;
 
 @import 'bootstrap';
+
+.center {
+	text-align: center;
+}
+
+
+.navbar-brand {
+	font-weight: bold;
+}
