--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,5 @@
-<div class="jumbotron">
-	<h1>Welcome to my app!</h1>
-	<p>Click here to <%= link_to "Sign up", "http://www.guehna.de", class: "btn btn-primary"%>!</p>
+<div class="jumbotron center">
+	<h1>Meltplanung!</h1>
+	<p>
+	<%= link_to "Sign up", "#", class: "btn btn-primary"%></p>
 </div>
